--- a/action.yml
+++ b/action.yml
@@ -11,7 +11,9 @@ runs:
       uses: actions/checkout@v3
     - name: Download Detekt Configuration
       run: |
+        echo 'Downloading configuration'
         curl -L -o detekt.yml https://raw.githubusercontent.com/monta-app/detekt-action/main/conf/detekt.yml
+        ls -a
       shell: bash
     - name: Run Detekt
       uses: alaegin/Detekt-Action@v1.22.0
