--- a/action.yml
+++ b/action.yml
@@ -19,9 +19,10 @@ runs:
     - name: Download Detekt Configuration
       run: |
         project_type="${{ steps.project_type.outputs.project_type }}"
+        echo 'project type = $project_type'
         if [ "$project_type" == "ktor" ]; then
           echo 'Downloading ktor configuration'
-          curl -L -o detekt.yml https://raw.githubusercontent.com/monta-app/detekt-action/main/conf/ktor-detekt.yml
+          curl -L -o ktor-detekt.yml https://raw.githubusercontent.com/monta-app/detekt-action/main/conf/ktor-detekt.yml
         else
           echo 'Downloading micronaut configuration'
           curl -L -o detekt.yml https://raw.githubusercontent.com/monta-app/detekt-action/main/conf/detekt.yml
