--- a/Dockerfile.monta-detekt
+++ b/Dockerfile.monta-detekt
@@ -4,8 +4,8 @@ ARG DETEKT_VERSION=1.23.4
 
 WORKDIR /detekt
 
-RUN curl -L -o detekt.jar https://github.com/detekt/detekt/releases/download/v${DETEKT_VERSION}/detekt-cli-1.23.4-all.jar
-RUN curl -L -o detekt-formatting.jar https://github.com/detekt/detekt/releases/download/v${DETEKT_VERSION}/detekt-formatting-1.23.4.jar
+RUN curl -L -o detekt.jar https://github.com/detekt/detekt/releases/download/v${DETEKT_VERSION}/detekt-cli-${DETEKT_VERSION}-all.jar
+RUN curl -L -o detekt-formatting.jar https://github.com/detekt/detekt/releases/download/v${DETEKT_VERSION}/detekt-formatting-${DETEKT_VERSION}.jar
 
 COPY conf/detekt.yml detekt.yml
 COPY .docker/run_monta_detekt.sh /bin/run_monta_detekt
