--- a/action.yml
+++ b/action.yml
@@ -12,7 +12,7 @@ runs:
     - name: Download cURL
       run: |
         sudo apt-get update
-        sudo apt-get install curl
+        sudo apt-get install -y curl
       shell: bash
     - name: Download Detekt Configuration
       run: |
