--- a/conf/detekt.yml
+++ b/conf/detekt.yml
@@ -753,3 +753,4 @@ style:
     excludes: [ '**/test/**', '**/androidTest/**', '**/commonTest/**', '**/jvmTest/**', '**/jsTest/**', '**/iosTest/**' ]
     excludeImports:
       - 'java.util.*'
+      - 'io.ktor.*'
