fix: tweak to ktor import rule

--- a/conf/detekt.yml
+++ b/conf/detekt.yml
@@ -753,4 +753,4 @@ style:
     excludes: [ '**/test/**', '**/androidTest/**', '**/commonTest/**', '**/jvmTest/**', '**/jsTest/**', '**/iosTest/**' ]
     excludeImports:
       - 'java.util.*'
-      - 'io.ktor.*'
+      - 'io.ktor.**'
