--- a/action.yml
+++ b/action.yml
@@ -36,4 +36,4 @@ runs:
       uses: alaegin/Detekt-Action@v1.23.6
       with:
         github_token: ${{ inputs.github-token }}
-        detekt_config: detekt.yml,inputs.project-config-overrides
+        detekt_config: detekt.yml,${{ inputs.project-config-overrides }}
