--- a/conf/detekt.yml
+++ b/conf/detekt.yml
@@ -691,9 +691,7 @@ style:
   SpacingBetweenPackageAndImports:
     active: false
   ThrowsCount:
-    active: true
-    max: 2
-    excludeGuardClauses: false
+    active: false
   TrailingWhitespace:
     active: false
   UnnecessaryAbstractClass:
