fix: added ktor to excludes for wildcards

--- a/conf/detekt.yml
+++ b/conf/detekt.yml
@@ -752,3 +752,5 @@ style:
     excludes: [ '**/test/**', '**/androidTest/**', '**/commonTest/**', '**/jvmTest/**', '**/jsTest/**', '**/iosTest/**' ]
     excludeImports:
       - 'java.util.*'
+      - 'io.ktor.**'
+      - 'kotlin.test.**'
