--- a/conf/detekt.yml
+++ b/conf/detekt.yml
@@ -86,7 +86,24 @@ complexity:
     threshold: 10
     includeStaticDeclarations: false
     includePrivateDeclarations: false
-  ComplexMethod:
+  # ComplexMethod is deprecated - Rule is renamed to CyclomaticComplexMethod
+  # ComplexMethod:
+  #   active: true
+  #   threshold: 15
+  #   ignoreSingleWhenExpression: false
+  #   ignoreSimpleWhenEntries: false
+  #   ignoreNestingFunctions: false
+  #   nestingFunctions:
+  #     - 'also'
+  #     - 'apply'
+  #     - 'forEach'
+  #     - 'isNotNull'
+  #     - 'ifNull'
+  #     - 'let'
+  #     - 'run'
+  #     - 'use'
+  #     - 'with'
+  CyclomaticComplexMethod:
     active: true
     threshold: 15
     ignoreSingleWhenExpression: false
@@ -288,7 +305,8 @@ formatting:
     active: true
     autoCorrect: true
     indentSize: 4
-    continuationIndentSize: 4
+    # continuationIndentSize is deprecated - ignored by KtLint and will have no effect
+    # continuationIndentSize: 4
   MaximumLineLength:
     active: false
     maxLineLength: 140
@@ -401,7 +419,8 @@ naming:
     parameterPattern: '[a-z][A-Za-z0-9]*'
     privateParameterPattern: '[a-z][A-Za-z0-9]*'
     excludeClassPattern: '$^'
-    ignoreOverridden: true
+    # ignoreOverridden is deprecated - This configuration is ignored and will be removed in the future
+    # ignoreOverridden: true
   EnumNaming:
     active: true
     excludes: [ '**/test/**', '**/androidTest/**', '**/commonTest/**', '**/jvmTest/**', '**/jsTest/**', '**/iosTest/**' ]
@@ -424,13 +443,15 @@ naming:
     functionPattern: '([a-z][a-zA-Z0-9]*)|(`.*`)'
     excludeClassPattern: '$^'
     ignoreAnnotated: ['Composable']
-    ignoreOverridden: true
+    # ignoreOverridden is deprecated - This configuration is ignored and will be removed in the future
+    # ignoreOverridden: true
   FunctionParameterNaming:
     active: true
     excludes: [ '**/test/**', '**/androidTest/**', '**/commonTest/**', '**/jvmTest/**', '**/jsTest/**', '**/iosTest/**' ]
     parameterPattern: '[a-z][A-Za-z0-9]*'
     excludeClassPattern: '$^'
-    ignoreOverridden: true
+    # ignoreOverridden is deprecated - This configuration is ignored and will be removed in the future
+    # ignoreOverridden: true
   InvalidPackageDeclaration:
     active: false
     rootPackage: ''
@@ -475,7 +496,8 @@ naming:
     variablePattern: '[a-z][A-Za-z0-9]*'
     privateVariablePattern: '(_)?[a-z][A-Za-z0-9]*'
     excludeClassPattern: '$^'
-    ignoreOverridden: true
+    # ignoreOverridden is deprecated - This configuration is ignored and will be removed in the future
+    # ignoreOverridden: true
 
 performance:
   active: true
@@ -504,8 +526,9 @@ potential-bugs:
     active: false
   DoubleMutabilityForCollection:
     active: false
-  DuplicateCaseInWhenExpression:
-    active: true
+  # DuplicateCaseInWhenExpression is deprecated as compiler performs this check by default
+  # DuplicateCaseInWhenExpression:
+  #   active: true
   EqualsAlwaysReturnsTrueOrFalse:
     active: true
   EqualsWithHashCodeExist:
@@ -518,7 +541,7 @@ potential-bugs:
     active: false
   IgnoredReturnValue:
     active: false
-    restrictToAnnotatedMethods: true
+    restrictToConfig: true
     returnValueAnnotations:
       - '*.CheckResult'
       - '*.CheckReturnValue'
@@ -541,13 +564,15 @@ potential-bugs:
     ignoreOnClassesPattern: ''
   MapGetWithNotNullAssertionOperator:
     active: false
-  MissingWhenCase:
-    active: true
-    allowElseExpression: true
+  # MissingWhenCase is deprecated as compiler performs this check by default
+  # MissingWhenCase:
+  #   active: true
+  #   allowElseExpression: true
   NullableToStringCall:
     active: false
-  RedundantElseInWhen:
-    active: true
+  # RedundantElseInWhen is deprecated as compiler performs this check by default
+  # RedundantElseInWhen:
+  #   active: true
   UnconditionalJumpStatementInLoop:
     active: false
   UnnecessaryNotNullOperator:
@@ -578,7 +603,8 @@ style:
     active: false
   DataClassContainsFunctions:
     active: false
-    conversionFunctionPrefix: 'to'
+    conversionFunctionPrefix:
+      - 'to'
   DataClassShouldBeImmutable:
     active: false
   DestructuringDeclarationWithTooManyEntries:
@@ -597,10 +623,13 @@ style:
     includeLineWrapping: false
   ForbiddenComment:
     active: true
-    values:
-      - 'FIXME:'
-      - 'STOPSHIP:'
-      - 'TODO:'
+    comments:
+      - reason: 'FIXME:'
+        value: 'FIXME:'
+      - reason: 'STOPSHIP:'
+        value: 'STOPSHIP:'
+      - reason: 'TODO:'
+        value: 'TODO:'
     allowedPatterns: ''
   ForbiddenImport:
     active: false
@@ -611,12 +640,13 @@ style:
     methods:
       - 'kotlin.io.print'
       - 'kotlin.io.println'
-  ForbiddenPublicDataClass:
-    active: true
-    excludes: [ '**' ]
-    ignorePackages:
-      - '*.internal'
-      - '*.internal.*'
+  # ForbiddenPublicDataClass is deprecated - Rule migrated to `libraries` ruleset plugin
+  # ForbiddenPublicDataClass:
+  #   active: true
+  #   excludes: [ '**' ]
+  #   ignorePackages:
+  #     - '*.internal'
+  #     - '*.internal.*'
   ForbiddenVoid:
     active: false
     ignoreOverridden: false
@@ -625,20 +655,27 @@ style:
     active: true
     ignoreOverridableFunction: true
     ignoreActualFunction: true
-    excludedFunctions: ''
-  LibraryCodeMustSpecifyReturnType:
-    active: true
-    excludes: [ '**' ]
-  LibraryEntitiesShouldNotBePublic:
-    active: true
-    excludes: [ '**' ]
+    excludedFunctions: []
+  # LibraryCodeMustSpecifyReturnType is deprecated - Rule migrated to `libraries` ruleset plugin
+  # LibraryCodeMustSpecifyReturnType:
+  #   active: true
+  #   excludes: [ '**' ]
+  # LibraryEntitiesShouldNotBePublic is deprecated - Rule migrated to `libraries` ruleset plugin
+  # LibraryEntitiesShouldNotBePublic:
+  #   active: true
+  #   excludes: [ '**' ]
   LoopWithTooManyJumpStatements:
     active: true
     maxJumpCount: 1
   MagicNumber:
     active: false
-  MandatoryBracesIfStatements:
+  # MandatoryBracesIfStatements is deprecated - Use BracesOnIfStatements with 'always' configuration instead
+  # MandatoryBracesIfStatements:
+  #   active: false
+  BracesOnIfStatements:
     active: false
+    singleLine: 'never'
+    multiLine: 'always'
   MandatoryBracesLoops:
     active: false
   MaxLineLength:
@@ -665,8 +702,13 @@ style:
     active: true
   OptionalUnit:
     active: false
-  OptionalWhenBraces:
+  # OptionalWhenBraces is deprecated - Same functionality is implemented in BracesOnWhenStatements
+  # OptionalWhenBraces:
+  #   active: false
+  BracesOnWhenStatements:
     active: false
+    singleLine: 'never'
+    multiLine: 'necessary'
   PreferToOverPairSyntax:
     active: false
   ProtectedMemberInFinalClass:
@@ -680,7 +722,8 @@ style:
   ReturnCount:
     active: true
     max: 4
-    excludedFunctions: 'equals'
+    excludedFunctions:
+      - 'equals'
     excludeLabeled: false
     excludeReturnFromLambda: true
     excludeGuardClauses: false
